--- a/Testing/Testing.vcxproj
+++ b/Testing/Testing.vcxproj
@@ -56,6 +56,7 @@
     <ClCompile Include="Json.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="LuaCore.cpp" />
+    <ClCompile Include="Modding.cpp" />
     <ClCompile Include="Path.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
