--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -62,8 +62,8 @@
     <ClInclude Include="Modding\EntityType.h">
       <Filter>Modding</Filter>
     </ClInclude>
-    <ClInclude Include="Application\Application.h">
-      <Filter>Application</Filter>
+    <ClInclude Include="Framework\Application.h">
+      <Filter>Framework</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -82,7 +82,7 @@
     <Filter Include="Debugging">
       <UniqueIdentifier>{9822cdcf-cfef-48a7-9c2a-97eb9773d8e2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Application">
+    <Filter Include="Framework">
       <UniqueIdentifier>{a0bc3e5f-1a39-4ac2-9239-8ca4ad4f67c8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -126,8 +126,8 @@
     <ClCompile Include="Modding\EntityType.cpp">
       <Filter>Modding</Filter>
     </ClCompile>
-    <ClCompile Include="Application\Application.cpp">
-      <Filter>Application</Filter>
+    <ClCompile Include="Framework\Application.cpp">
+      <Filter>Framework</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
