--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -10,6 +10,15 @@
     <Filter Include="Core">
       <UniqueIdentifier>{87cd686f-b292-47b9-b7b5-8d4d656cf2c9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Config">
+      <UniqueIdentifier>{24988054-4f18-4a36-a0e8-3d77890bd1cc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="INIReader">
+      <UniqueIdentifier>{20b1dd4f-bc7f-4211-a762-15b53e4ef52e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Debugging">
+      <UniqueIdentifier>{627d2bae-4836-4195-bade-5b1596723634}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Exceptions\Exception.cpp">
@@ -41,6 +50,15 @@
     </ClCompile>
     <ClCompile Include="Exceptions\InvalidOperationException.cpp">
       <Filter>Exceptions</Filter>
+    </ClCompile>
+    <ClCompile Include="Config\GameConfiguration.cpp">
+      <Filter>Config</Filter>
+    </ClCompile>
+    <ClCompile Include="INIReader\INIReader.cpp">
+      <Filter>INIReader</Filter>
+    </ClCompile>
+    <ClCompile Include="Debugging\Logger.cpp">
+      <Filter>Debugging</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -82,6 +100,21 @@
     </ClInclude>
     <ClInclude Include="Exceptions\InvalidOperationException.h">
       <Filter>Exceptions</Filter>
+    </ClInclude>
+    <ClInclude Include="Config\GameConfiguration.h">
+      <Filter>Config</Filter>
+    </ClInclude>
+    <ClInclude Include="INIReader\INIReader.h">
+      <Filter>INIReader</Filter>
+    </ClInclude>
+    <ClInclude Include="INIReader\INISyntaxException.h">
+      <Filter>INIReader</Filter>
+    </ClInclude>
+    <ClInclude Include="Debugging\Logger.h">
+      <Filter>Debugging</Filter>
+    </ClInclude>
+    <ClInclude Include="Debugging\Verbosity.h">
+      <Filter>Debugging</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
